Demos: different way to prevent vertical scrollbar on page div. fixes #5658

--- a/docs/_assets/css/jqm-demos.css
+++ b/docs/_assets/css/jqm-demos.css
@@ -6,12 +6,6 @@
 body, .jqm-demos  {
 	background-color: #fefefe;
 }
-.jqm-demos.ui-page-active {
-	overflow-x: visible;	
-}
-.jqm-demos.ui-page-active.ui-page-panel-open {
-	overflow-x: hidden;	
-}
 
 /* Header */
 .jqm-header {
